# SOGE

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: SOGEConfig.cmake.in
include/: Application.hpp  Camera.hpp  EntryPoint.hpp  PerspectiveCameraController.hpp  RenderObject.hpp  Scene.hpp  Transform.hpp
